fixed spacing of squiggly braces, removed a comma from line 229.

--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -34,7 +34,7 @@ html {
 	font-family: "gotham_lightregular", sans-serif;	
 }
 
-::selection{
+::selection {
 	background: $theme-tan;
 	color: #fff;
 }
@@ -226,11 +226,11 @@ li {
 		}
 
 		h3,
-		h4, {
+		h4 {
 			color: $theme-title-text;
 			font-family: "gotham_lightregular";
 		}
-		
+
 		p {
 			color: $p-text-color;
 			font-family: "gotham_bookregular";
